# MaskMapWizard

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  main.py  pyproject.toml  requirements.txt  ruff.toml
docs/: CHANGELOG.md  build_instructions.md  build_instructions.txt  tips_troubleshooting.md
src/MaskMapWizard/: __main__.py
src/MaskMapWizard/core/: maskmap_builder.py  utils.py
src/MaskMapWizard/gui/: main_window.py
ui/: main_window.py
